vlib/v/checker/tests/comptime_call_method_void_err.out
vlib/v/checker/tests/comptime_call_method_void_err.vv:17:4: error: `println` can not print void expressions
   15 |     $for method in Dummy.methods {
   16 |         if os.args.len >= 1 {
   17 |             println(Dummy{}.$method(os.args[0]))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   18 |         }
   19 |     }
